Fix clicking outside of dropdown not collapsing it Remove random console.log

--- a/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
+++ b/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
@@ -32,6 +32,8 @@
     width: 100%;
     gap: 5px;
     transform-origin: top;
+    left: 0;
+    top: 2.5em;
     
     z-index: 1;
     margin-top: 5px;
@@ -54,7 +56,7 @@
             bottom: calc(50% - 0.875em);
             left: 0;
             opacity: 0.05;
-            border-radius: calc($base-border-radius / 2);
+            border-radius: $base-border-radius;
         }
     }
 }
